# dj_tg_auth

./: .env.template  .gitignore  Makefile  README.md  dev.Dockerfile  docker-compose.yml  pyproject.toml
authorization/: admin.py  services.py  tests.py  urls.py  views.py
authorization/templates/authorization/: login.html
bot/: services.py  tests.py
bot/management/commands/: start_bot.py
config/: settings.py  urls.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py
